/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Kotlin application project to get you started.
 */
plugins {
    // Apply the Kotlin JVM plugin to add support for Kotlin on the JVM.
    id 'org.jetbrains.kotlin.jvm' version '1.3.41'
    id 'java'
    id 'maven'
    // Apply the application plugin to add support for building a CLI application.
    id 'application'
}
sourceSets {
    main.kotlin.srcDirs += 'src/'
    main.java.srcDirs += "src/"
}
application{
    mainClassName = 'com.p3achb0t.Main'
}
repositories {
    // Use jcenter for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
    mavenCentral()
    google()
}

compileKotlin{
    kotlinOptions{
        jvmTarget = "11"
    }
}
compileJava {
    options.compilerArgs.addAll([
            "--add-exports","java.desktop/sun.awt=ALL-UNNAMED"
    ])

    options.compilerArgs.addAll([
            "--add-exports","java.desktop/java.awt.peer=ALL-UNNAMED"
    ])
}

group = 'P3achB0t'
// artifactId is taken by default, from folder name
version = '0.1-SNAPSHOT'

dependencies {
    // Use the Kotlin JDK 8 standard library.
    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
    implementation("org.jetbrains.kotlin:kotlin-reflect:1.3.41")
    implementation("no.tornado:tornadofx:1.7.19")
    implementation("com.google.code.gson:gson:2.8.5")
    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-RC")
    implementation("org.ow2.asm:asm:7.1")
    implementation("org.ow2.asm:asm-tree:7.1")
    implementation("org.ow2.asm:asm-util:7.1")
    implementation("org.ow2.asm:asm-analysis:7.1")
    implementation("org.ow2.asm:asm-commons:7.1")
    implementation("io.github.microutils:kotlin-logging:1.7.2")
    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.9.7")
    compile 'com.intellij:forms_rt:7.0.3'
    compile 'commons-lang:commons-lang:2.3'

    // Use the Kotlin test library.
    testImplementation 'org.jetbrains.kotlin:kotlin-test'

    // Use the Kotlin JUnit integration.
    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
}
sourceCompatibility = '11'
targetCompatibility = '11'

// Define the main class for the application.
apply plugin: 'kotlin'
apply plugin: 'application'
apply plugin: 'maven'